[gd_scene load_steps=19 format=3 uid="uid://o0frqipigrid"]

[ext_resource type="Theme" uid="uid://inr4tcdwqeln" path="res://game_theme.tres" id="1_8okaa"]
[ext_resource type="Script" path="res://scenes/game_scene.gd" id="1_igcag"]
[ext_resource type="Texture2D" uid="uid://cig86d075m5k2" path="res://assets/images/backgrounds/background2.png" id="2_qyx23"]
[ext_resource type="PackedScene" uid="uid://cs7mn5t8ivwom" path="res://menus/settings_menu.tscn" id="3_d5nv2"]
[ext_resource type="PackedScene" uid="uid://b1p6hwtllo4pe" path="res://menus/challenge_pick_menu.tscn" id="4_8ei6e"]
[ext_resource type="PackedScene" uid="uid://ccwff0lg8ignc" path="res://menus/pause_menu.tscn" id="4_br5io"]
[ext_resource type="StyleBox" uid="uid://de4gsss2kx2ub" path="res://assets/textures/square_button_orange_normal.tres" id="5_muhv7"]
[ext_resource type="StyleBox" uid="uid://b3dl02p2uc5q5" path="res://assets/textures/square_button_orange_hover.tres" id="6_lh4qt"]
[ext_resource type="StyleBox" uid="uid://nchhtwhl1t30" path="res://assets/textures/square_button_orange_pressed.tres" id="7_yrflg"]
[ext_resource type="StyleBox" uid="uid://cligk1l5hdf6l" path="res://assets/textures/square_button_focus.tres" id="8_tjx72"]
[ext_resource type="StyleBox" uid="uid://w54p6wkr12v3" path="res://assets/textures/square_button_disabled.tres" id="8_wj41e"]
[ext_resource type="StyleBox" uid="uid://cjx5uw63wtb8a" path="res://assets/textures/notification_background.tres" id="10_6vgtl"]
[ext_resource type="FontFile" uid="uid://dv3gxnxbaw40v" path="res://assets/fonts/fredoka_one_bold.ttf" id="11_l5qi5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ptwi3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sjndl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ae70r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ia7g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bud5c"]

[node name="GameScene" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8okaa")
script = ExtResource("1_igcag")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qyx23")

[node name="ChallengePickMenu" parent="." instance=ExtResource("4_8ei6e")]
unique_name_in_owner = true
layout_mode = 1

[node name="Challenge" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 1
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChallengeLayer" type="Control" parent="Challenge"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseButton" type="Button" parent="Challenge/ChallengeLayer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 68.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = ExtResource("5_muhv7")
theme_override_styles/hover = ExtResource("6_lh4qt")
theme_override_styles/pressed = ExtResource("7_yrflg")
theme_override_styles/disabled = ExtResource("8_wj41e")
theme_override_styles/focus = ExtResource("8_tjx72")
text = "⏸"

[node name="FinishedNotification" type="Control" parent="Challenge/ChallengeLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Challenge/ChallengeLayer/FinishedNotification"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0, 0.00392157, 0.4)

[node name="CenterContainer" type="CenterContainer" parent="Challenge/ChallengeLayer/FinishedNotification"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Challenge/ChallengeLayer/FinishedNotification/CenterContainer"]
custom_minimum_size = Vector2(640, 360)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Challenge/ChallengeLayer/FinishedNotification/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Challenge/ChallengeLayer/FinishedNotification/CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="Challenge/ChallengeLayer/FinishedNotification/CenterContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Gratulacje! Udało ci się ukończyć wyzwanie!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Challenge/ChallengeLayer/FinishedNotification/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ChallengeListButton" type="Button" parent="Challenge/ChallengeLayer/FinishedNotification/CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Zagraj w inne wyzwania"

[node name="CompanionLayer" type="Control" parent="Challenge"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Challenge/CompanionLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0, 0.00392157, 0.4)

[node name="Companion" type="TextureRect" parent="Challenge/CompanionLayer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -340.0
offset_top = -340.0
grow_horizontal = 0
grow_vertical = 0
expand_mode = 2

[node name="CompanionMessage" type="Label" parent="Challenge/CompanionLayer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -644.0
offset_top = -440.0
offset_right = -260.0
offset_bottom = -260.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.00392157, 0, 0.00392157, 1)
theme_override_constants/outline_size = 0
theme_override_styles/normal = ExtResource("10_6vgtl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Triangle" type="Control" parent="Challenge/CompanionLayer/CompanionMessage"]
layout_mode = 1
anchor_left = 0.8
anchor_top = 1.0
anchor_right = 0.85
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0

[node name="Polygon2D" type="Polygon2D" parent="Challenge/CompanionLayer/CompanionMessage/Triangle"]
polygon = PackedVector2Array(0, 0, 64, 0, 96, 32)

[node name="Line2D" type="Line2D" parent="Challenge/CompanionLayer/CompanionMessage/Triangle"]
points = PackedVector2Array(0, 3, 96, 32, 64.5, 3)
width = 4.0
default_color = Color(0.00392157, 0, 0.00392157, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ConfirmButton" type="Button" parent="Challenge/CompanionLayer/CompanionMessage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -65.0
offset_right = -24.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.494118, 0.878431, 1)
theme_override_colors/font_pressed_color = Color(0, 0.380392, 0.686275, 1)
theme_override_colors/font_hover_color = Color(0, 0.435294, 0.780392, 1)
theme_override_colors/font_focus_color = Color(0, 0.494118, 0.878431, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0.380392, 0.686275, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("11_l5qi5")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_ptwi3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sjndl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ae70r")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5ia7g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bud5c")
text = "OK"

[node name="PauseMenu" parent="." instance=ExtResource("4_br5io")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SettingsMenu" parent="." instance=ExtResource("3_d5nv2")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="challenge_picked" from="ChallengePickMenu" to="." method="_pick_challenge"]
[connection signal="pressed" from="Challenge/ChallengeLayer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Challenge/ChallengeLayer/FinishedNotification/CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/ChallengeListButton" to="." method="_on_challenge_list_button_pressed"]
[connection signal="scene_changed" from="PauseMenu" to="." method="_change_scene"]
[connection signal="unpaused" from="PauseMenu" to="." method="_unpause_game"]
[connection signal="exited" from="SettingsMenu" to="." method="_on_settings_button_exited"]
